--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "node-fetch": "^2.2.0",
     "steam-api": "^1.1.3",
     "steamapi": "^2.0.2",
-    "web-api-steam": "^1.0.8"
+    "web-api-steam": "^1.0.8",
+    "steamid": "^1.1.0"
   }
 }
